--- a/src/sass/_shame.sass
+++ b/src/sass/_shame.sass
@@ -17,9 +17,39 @@ h1
 
   div
     align-items: center
-    background: color(amber)
+    background: color(red)
+    border-radius: 4px
     color: rgba(black, .7)
+    cursor: pointer
     display: flex
     justify-content: space-around
     height: 30vh
-    width: 7vw
+    width: 8vw
+
+    &:nth-child(1)
+      background: color(red)
+      height: 16vh
+
+    &:nth-child(2)
+      background: color(orange)
+      height: 18vh
+
+    &:nth-child(3)
+      background: color(yellow)
+      height: 20vh
+
+    &:nth-child(4)
+      background: color(teal)
+      height: 22vh
+
+    &:nth-child(5)
+      background: color(lightblue)
+      height: 24vh
+
+    &:nth-child(6)
+      background: color(indigo)
+      height: 26vh
+
+    &:nth-child(7)
+      background: color(purple)
+      height: 28vh
