Update readme and colours

--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -7,6 +7,6 @@ $font-stack-mono: Inconsolata, Monaco, Consolas, 'Courier New', monospace
 $font-weight: 300
 $line-height: 1.5
 
-$color-text: color(deeppurple, dark)
-$color-bg: color(deeppurple, light)
+$color-text: color(teal, dark)
+$color-bg: color(lightgreen, light)
 $color-link: #fff
